force-app/main/default/objects/DesignSuggestion__c/DesignSuggestion__c.object-meta.xml
<CustomObject>
    <label>製品改善提案</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>提案番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>製品改善提案</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>