force-app/main/default/objects/DesignSuggestion__c/fields/DiagramUrl__c.field-meta.xml
<CustomField>
    <fullName>DiagramUrl__c</fullName>
    <label>図面URL（署名付き）</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>