force-app/main/default/objects/DesignSuggestion__c/fields/GeneratedAt__c.field-meta.xml
<CustomField>
    <fullName>GeneratedAt__c</fullName>
    <label>生成日時</label>
    <type>DateTime</type>
</CustomField>