force-app/main/default/objects/DesignSuggestion__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>製品施策</label>
    <referenceTo>Product_Initiative__c</referenceTo>
    <relationshipLabel>製品改善提案</relationshipLabel>
    <relationshipName>Design_Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>