force-app/main/default/objects/DesignSuggestion__c/fields/NeedsCard__c.field-meta.xml
<CustomField>
    <fullName>NeedsCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元ニーズカード</label>
    <referenceTo>Needs_Card__c</referenceTo>
    <relationshipLabel>製品改善提案</relationshipLabel>
    <relationshipName>Design_Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>