force-app/main/default/objects/DesignSuggestion__c/fields/ProcessedBy__c.field-meta.xml
<CustomField>
    <fullName>ProcessedBy__c</fullName>
    <label>生成AI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>