force-app/main/default/objects/DesignSuggestion__c/fields/ReferenceDiagram__c.field-meta.xml
<CustomField>
    <fullName>ReferenceDiagram__c</fullName>
    <label>参照図面</label>
    <length>255</length>
    <type>Text</type>
</CustomField>