force-app/main/default/objects/DesignSuggestion__c/fields/ReferenceSpec__c.field-meta.xml
<CustomField>
    <fullName>ReferenceSpec__c</fullName>
    <label>参照仕様書</label>
    <length>255</length>
    <type>Text</type>
</CustomField>