force-app/main/default/objects/DesignSuggestion__c/fields/SpecUrl__c.field-meta.xml
<CustomField>
    <fullName>SpecUrl__c</fullName>
    <label>仕様書URL（署名付き）</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>