force-app/main/default/objects/DesignSuggestion__c/fields/SuggestionText__c.field-meta.xml
<CustomField>
    <fullName>SuggestionText__c</fullName>
    <label>提案本文</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>