force-app/main/default/objects/DesignSuggestion__c/fields/TargetComponent__c.field-meta.xml
<CustomField>
    <fullName>TargetComponent__c</fullName>
    <label>対象コンポーネント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>