force-app/main/default/objects/DesignSuggestion__c/fields/TargetProduct__c.field-meta.xml
<CustomField>
    <fullName>TargetProduct__c</fullName>
    <label>対象製品</label>
    <length>255</length>
    <type>Text</type>
</CustomField>